Updated website (automated commit)

--- a/_sources/faq.txt
+++ b/_sources/faq.txt
@@ -24,5 +24,5 @@ current features and goals of the project.
 Hyperspy is very cool, but I want to export the data to analyse it with X that is so much cooler, is it possible?
 -----------------------------------------------------------------------------------------------------------------
 
-**Answer:** Sure! By default Hyperspy saves the data in HDF5, which is an open standard supported by most data analysis software either by default or via plugins. If your favourite data analysis package does not support HDF5 then you can check if it does support any of the other formats to which Hyperspy can write, see :ref:`supported-formats`. If X is Gatan's Digital Micrograph, which does not support HDF5, you can save to the :ref:`ripple-format` and use the :ref:`import-rpl' to read the RPL file.
+**Answer:** Sure! By default Hyperspy saves the data in HDF5, which is an open standard supported by most data analysis software either by default or via plugins. If your favourite data analysis package does not support HDF5 then you can check if it does support any of the other formats to which Hyperspy can write, see :ref:`supported-formats`. If X is Gatan's Digital Micrograph, which does not support HDF5, you can save to the :ref:`ripple-format` and use the :ref:`import-rpl` to read the RPL file.
 
