Updated website (automated commit)

--- a/_sources/news.txt
+++ b/_sources/news.txt
@@ -1,5 +1,6 @@
 News
 ====
+* Hyperspy 0.4  has been released! See :ref:`beta-releases`
 * Hyperspy 0.3.0beta2 has been released! See :ref:`beta-releases`
 * A new version of the ImportRPL Digital Micrograph plugin has been released to fix a bug concerning reading of SIs. See :ref:`import-rpl`
 * The first beta version of Hyperspy 0.3.0 has been released! See :ref:`beta-releases`
