Updated website (automated commit)

--- a/_sources/faq.txt
+++ b/_sources/faq.txt
@@ -26,3 +26,12 @@ Hyperspy is very cool, but I want to export the data to analyse it with X that i
 
 **Answer:** Sure! By default Hyperspy saves the data in HDF5, which is an open standard supported by most data analysis software either by default or via plugins. If your favourite data analysis package does not support HDF5 then you can check if it does support any of the other formats to which Hyperspy can write, see :ref:`supported-formats`. If X is Gatan's Digital Micrograph, which does not support HDF5, you can save to the :ref:`ripple-format` and use the :ref:`import-rpl` to read the RPL file.
 
+Digital Micrograph raises an error when attempting to use the SI tool in a spectrum image created by Hyperspy and imported using the ImportRPL plugin
+-----------------------------------------------------------------------------------------------------------------------------------------------------
+
+**Answer:** At least some versions of Digital Micrograph cannot use the SI tool on spectrum images of Real8 data type (this is equivalent to float64 in Python/Hyperspy).To exchange data with digital micrograph probably the best is to convert it to float32 before saving, e.g.:
+
+.. code-block:: python
+    
+    >>> s.change_dtype('float32') # Assuming that s contains the file that you want to export
+    >>> s.save('happy_exporting.rpl')
