Updated website (automated commit)

--- a/_sources/news.txt
+++ b/_sources/news.txt
@@ -1,5 +1,6 @@
 News
 ====
+* A tutorial on analysis of multidimensional spectra using Hyperspy is available as part of the official program of SFMu 2013. See :ref:`trainings` for more details.  
 * ``28/09/2012`` Hyperspy 0.5.1  has been released! See :ref:`beta-releases`
 * ``8/09/2012`` Hyperspy 0.5  has been released! See :ref:`beta-releases`
 * ``12/06/2012`` A new version of ImportRPL has been released. See :ref:`import-rpl`
