--- a/_sources/news.txt
+++ b/_sources/news.txt
@@ -1,10 +1,15 @@
 News
 ====
-* ``04/06/2013`` Hyperspy 0.6  has been released! See :ref:`beta-releases`
-* A tutorial on analysis of multidimensional spectra using Hyperspy is available as part of the official program of SFMu 2013. See :ref:`trainings` for more details.  
-* ``28/09/2012`` Hyperspy 0.5.1  has been released! See :ref:`beta-releases`
-* ``8/09/2012`` Hyperspy 0.5  has been released! See :ref:`beta-releases`
-* ``12/06/2012`` A new version of ImportRPL has been released. See :ref:`import-rpl`
-* ``16/04/2012`` Hyperspy 0.4.1  has been released! See :ref:`beta-releases`
-* ``29/02/2012`` Hyperspy 0.4  has been released! See :ref:`beta-releases`
 
+.. feed::
+   :rss: news.rss
+   :title: Hyperspy News
+   :link: http://hyperspy.org/
+
+   news/news/release_0.6
+   news/sfmu2013
+   news/release_0.5.1
+   news/release_0.5
+   news/release_importrpl
+   news/release_0.4.1
+   news/release_0.4
