Updated website (automated commit)

--- a/_sources/news.txt
+++ b/_sources/news.txt
@@ -3,9 +3,10 @@ News
 
 .. feed::
    :rss: news.rss
-   :title: Hyperspy News
+   :title: HyperSpy News
    :link: http://hyperspy.org/
 
+   news/release_0.7
    news/release_0.6
    news/sfmu2013
    news/release_0.5.1
