Updated website (automated commit)

--- a/_sources/news.txt
+++ b/_sources/news.txt
@@ -6,6 +6,8 @@ News
    :title: HyperSpy News
    :link: http://hyperspy.org/
 
+   news/IMC2014
+   news/shire2014
    news/release_0.7
    news/release_0.6
    news/sfmu2013
