Updated website (automated commit)

--- a/_sources/news.txt
+++ b/_sources/news.txt
@@ -7,6 +7,7 @@ News
    :link: http://hyperspy.org/
 
    news/release_0.7.3
+   news/release_0.7.2
    news/new_demos_section
    news/release_0.7.1
    news/superstem2014
