--- a/_sources/news.txt
+++ b/_sources/news.txt
@@ -5,13 +5,10 @@ News
    :rss: news.rss
    :title: HyperSpy News
    :link: http://hyperspy.org/
-
-<<<<<<< HEAD
-   news/CambridgeWorkshop2015
-=======
-   news/release_0.8
+   
+   news/doi
    news/cambridge2015
->>>>>>> 38e16cc827df453d0bc0efbcd2610beeccafccba
+   news/release_0.8
    news/release_0.7.3
    news/release_0.7.2
    news/new_demos_section
