Updated website (automated commit)

--- a/_sources/news.txt
+++ b/_sources/news.txt
@@ -5,7 +5,8 @@ News
    :rss: news.rss
    :title: HyperSpy News
    :link: http://hyperspy.org/
-   
+
+   news/release_0.8.1
    news/doi
    news/cambridge2015
    news/release_0.8
